--- a/EarlyLearningHub/EarlyLearningHub/Pages/Main/ProviderLevel/Create.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/Main/ProviderLevel/Create.cshtml
@@ -5,122 +5,197 @@
     ViewData["Title"] = "Provider Level";
 }
 
-@*<h2>Create</h2>
+<link href="~/lib/bootstrap/dist/css/bootstrap-grid.css" rel="stylesheet" />
 
-<h4>ProviderLevel</h4>*@
+@*<h2>Create</h2>*@
+
+<h2>Provider Level</h2>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlQrId" class="control-label"></label>
-                <select asp-for="ProviderLevel.PlQrId" class ="form-control" asp-items="ViewBag.PlQrId"></select>
+
+
+
+
+
+<div class="container">
+    <form method="post">
+        <fieldset>
+            <legend>ABOUT PROVIDER</legend>
+
+            <div class="row">
+                <div class="col-md-3">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <label asp-for="ProviderLevel.PlQrId" class="control-label"></label>
+                    <select asp-for="ProviderLevel.PlQrId" class="form-control" asp-items="ViewBag.PlQrId"></select>
+                </div>
+
+                <div class="col-md-4">
+                    <label asp-for="ProviderLevel.PlElhId" class="control-label"></label>
+                    <select asp-for="ProviderLevel.PlElhId" class="form-control" asp-items="ViewBag.PlElhId"></select>
+                </div>
+
             </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlElhId" class="control-label"></label>
-                <select asp-for="ProviderLevel.PlElhId" class ="form-control" asp-items="ViewBag.PlElhId"></select>
+
+            <br />
+
+            <div class="row">
+                <div class="col-md-3">
+                    <label asp-for="ProviderLevel.PlPrvdId" class="control-label"></label>
+                    <select asp-for="ProviderLevel.PlPrvdId" class="form-control" asp-items="ViewBag.PlPrvdId"></select>
+                </div>
+                <div class="col-md-4">
+                    <label asp-for="ProviderLevel.PlPtId" class="control-label"></label>
+                    <select asp-for="ProviderLevel.PlPtId" class="form-control" asp-items="ViewBag.PlPtId"></select>
+                </div>   
+                <div class="col-md-4">
+                    <label asp-for="ProviderLevel.PlPeId" class="control-label"></label>
+                    <select asp-for="ProviderLevel.PlPeId" class="form-control" asp-items="ViewBag.PlPeId"></select>
+                </div>
+
             </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlPrvdId" class="control-label"></label>
-                <select asp-for="ProviderLevel.PlPrvdId" class ="form-control" asp-items="ViewBag.PlPrvdId"></select>
+            
+            <br />
+
+            <div class="row">
+
+                <div class="col-md-5">
+                    <label asp-for="ProviderLevel.PlLicencedOfficeChildCareOptId" class="control-label"></label>
+                    <select asp-for="ProviderLevel.PlLicencedOfficeChildCareOptId" class="form-control" asp-items="ViewBag.PlLicencedOfficeChildCareOptId"></select>
+                </div>
+                <div class="col-md-5">
+                    <label asp-for="ProviderLevel.PlNumClassroomServingPpc" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlNumClassroomServingPpc" class="form-control" />
+                    <span asp-validation-for="ProviderLevel.PlNumClassroomServingPpc" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlPeId" class="control-label"></label>
-                <select asp-for="ProviderLevel.PlPeId" class ="form-control" asp-items="ViewBag.PlPeId"></select>
+        </fieldset>
+
+        <br />
+
+        <fieldset>
+            <legend>PROGRAM OPERATION</legend>
+            <div class="row">
+                <div class="col-md-3">
+                    <label asp-for="ProviderLevel.PlProgStartDate" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlProgStartDate" class="form-control" />
+                    <span asp-validation-for="ProviderLevel.PlProgStartDate" class="text-danger"></span>
+                </div>
+                <div class="col-md-3">
+                    <label asp-for="ProviderLevel.PlProgEndDate" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlProgEndDate" class="form-control" />
+                    <span asp-validation-for="ProviderLevel.PlProgEndDate" class="text-danger"></span>
+                </div>
+
+            </div>   
+
+            <br/>  
+
+            <div class="row">
+                    
+                <div class="col-md-6">
+                    <label asp-for="ProviderLevel.PlDaysOfWeekPpsoccurs" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlDaysOfWeekPpsoccurs" class="form-control" />
+                    <span asp-validation-for="ProviderLevel.PlDaysOfWeekPpsoccurs" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlPtId" class="control-label"></label>
-                <select asp-for="ProviderLevel.PlPtId" class ="form-control" asp-items="ViewBag.PlPtId"></select>
+            
+            <br/>
+        
+            <div class="row">
+
+                <div class="col-md-2">
+                    <label asp-for="ProviderLevel.PlDailyStartTime" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlDailyStartTime" class="form-control"/>
+                    <span asp-validation-for="ProviderLevel.PlDailyStartTime" class="text-danger"></span>
+                </div>
+                <div class="col-md-2">
+                    <label asp-for="ProviderLevel.PlDailyEndTime" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlDailyEndTime" class="form-control"/>
+                    <span asp-validation-for="ProviderLevel.PlDailyEndTime" class="text-danger"></span>
+                </div>
+                <div class="col-md-3">
+                    <label asp-for="ProviderLevel.PlNumOfDaysInProgramYear" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlNumOfDaysInProgramYear" class="form-control"/>
+                    <span asp-validation-for="ProviderLevel.PlNumOfDaysInProgramYear" class="text-danger"></span>
+                </div>
+                <div class="col-md-3">
+                    <label asp-for="ProviderLevel.PlPlannedServiceHours" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlPlannedServiceHours" class="form-control"/>
+                    <span asp-validation-for="ProviderLevel.PlPlannedServiceHours" class="text-danger"></span>
+                </div>
+                <div class="col-md-5">
+                    <label asp-for="ProviderLevel.PlNumOfActualServiceHrsYtd" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlNumOfActualServiceHrsYtd" class="form-control"/>
+                    <span asp-validation-for="ProviderLevel.PlNumOfActualServiceHrsYtd" class="text-danger"></span>
+                </div>
+                <div class="col-md-5">
+                    <label asp-for="ProviderLevel.PlNumChildrenOnWaitlist" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlNumChildrenOnWaitlist" class="form-control"/>
+                    <span asp-validation-for="ProviderLevel.PlNumChildrenOnWaitlist" class="text-danger"></span>
+                </div>
+
+
             </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlLicencedOfficeChildCareOptId" class="control-label"></label>
-                <select asp-for="ProviderLevel.PlLicencedOfficeChildCareOptId" class ="form-control" asp-items="ViewBag.PlLicencedOfficeChildCareOptId"></select>
+        </fieldset>
+
+        <br />
+
+        <fieldset>
+            <legend>INSTRUCTIONAL TOOLS</legend>
+            <div class="row">
+                <div class="col-md-4">
+                    <label asp-for="ProviderLevel.PlCurriculaUsedPpc" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlCurriculaUsedPpc" class="form-control" />
+                    <span asp-validation-for="ProviderLevel.PlCurriculaUsedPpc" class="text-danger"></span>
+                </div>
+                <div class="col-md-4">
+                    <label asp-for="ProviderLevel.PlChildLevelAssessmentTools" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlChildLevelAssessmentTools" class="form-control" />
+                    <span asp-validation-for="ProviderLevel.PlChildLevelAssessmentTools" class="text-danger"></span>
+                </div>
+                <div class="col-md-6">
+                    <label asp-for="ProviderLevel.PlChildLevelScreeningTools" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlChildLevelScreeningTools" class="form-control" />
+                    <span asp-validation-for="ProviderLevel.PlChildLevelScreeningTools" class="text-danger"></span>
+                </div>
+                <div class="col-md-6">
+                    <label asp-for="ProviderLevel.PlClassroomClassObservationCompleted" class="control-label"></label>
+                    <input asp-for="ProviderLevel.PlClassroomClassObservationCompleted" class="form-control" />
+                    <span asp-validation-for="ProviderLevel.PlClassroomClassObservationCompleted" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlNumClassroomServingPpc" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlNumClassroomServingPpc" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlNumClassroomServingPpc" class="text-danger"></span>
+        </fieldset>
+
+        <br />
+
+        <fieldset>
+            <legend>QUALITY PROGRAM STATUS</legend>
+            <div class="row">
+                <div class="col-md-6">
+                    <label asp-for="ProviderLevel.PlSparkRatingBeginingOfYearSrId" class="control-label"></label>
+                    <select asp-for="ProviderLevel.PlSparkRatingBeginingOfYearSrId" class="form-control" asp-items="ViewBag.PlSparkRatingBeginingOfYearSrId"></select>
+                </div>
+                <div class="col-md-6">
+                    <label asp-for="ProviderLevel.PlSparkRatingEndOfYearSrId" class="control-label"></label>
+                    <select asp-for="ProviderLevel.PlSparkRatingEndOfYearSrId" class="form-control" asp-items="ViewBag.PlSparkRatingEndOfYearSrId"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlProgStartDate" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlProgStartDate" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlProgStartDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlProgEndDate" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlProgEndDate" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlProgEndDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlDaysOfWeekPpsoccurs" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlDaysOfWeekPpsoccurs" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlDaysOfWeekPpsoccurs" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlDailyStartTime" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlDailyStartTime" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlDailyStartTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlDailyEndTime" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlDailyEndTime" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlDailyEndTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlNumOfDaysInProgramYear" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlNumOfDaysInProgramYear" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlNumOfDaysInProgramYear" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlPlannedServiceHours" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlPlannedServiceHours" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlPlannedServiceHours" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlNumOfActualServiceHrsYtd" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlNumOfActualServiceHrsYtd" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlNumOfActualServiceHrsYtd" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlNumChildrenOnWaitlist" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlNumChildrenOnWaitlist" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlNumChildrenOnWaitlist" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlCurriculaUsedPpc" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlCurriculaUsedPpc" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlCurriculaUsedPpc" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlChildLevelAssessmentTools" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlChildLevelAssessmentTools" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlChildLevelAssessmentTools" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlChildLevelScreeningTools" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlChildLevelScreeningTools" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlChildLevelScreeningTools" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlClassroomClassObservationCompleted" class="control-label"></label>
-                <input asp-for="ProviderLevel.PlClassroomClassObservationCompleted" class="form-control" />
-                <span asp-validation-for="ProviderLevel.PlClassroomClassObservationCompleted" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlSparkRatingBeginingOfYearSrId" class="control-label"></label>
-                <select asp-for="ProviderLevel.PlSparkRatingBeginingOfYearSrId" class ="form-control" asp-items="ViewBag.PlSparkRatingBeginingOfYearSrId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProviderLevel.PlSparkRatingEndOfYearSrId" class="control-label"></label>
-                <select asp-for="ProviderLevel.PlSparkRatingEndOfYearSrId" class ="form-control" asp-items="ViewBag.PlSparkRatingEndOfYearSrId"></select>
-            </div>
-            <div class="form-group">
+        </fieldset>
+
+        <br />
+        <div class="row">
+            <div class="col-sm">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
-        </form>
-    </div>
+        </div>
+
+    </form>
+
+
+
+
+
 </div>
+
 
 <div>
     <a asp-page="Index">Back to List</a>
