--- a/EarlyLearningHub/EarlyLearningHub/Pages/Shared/_Layout.cshtml
+++ b/EarlyLearningHub/EarlyLearningHub/Pages/Shared/_Layout.cshtml
@@ -32,11 +32,12 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-page="/Index">Home</a></li>
                     @*<li><a asp-page="/About">About</a></li>
-                    <li><a asp-page="/Contact">Contact</a></li>*@
+        <li><a asp-page="/Contact">Contact</a></li>*@
                     <li><a asp-page="/TableMaintenance">Table Maintenance (Admin)</a></li>
                     <li><a asp-page="/Main/ProviderLevel/Create">Provider Level</a></li>
-                    <li><a asp-page="/Main/StudentLevel/Create">Student Level</a></li>
+                    <li><a asp-page="/Main/StudentLevel/Create">Child Level</a></li>
                     <li><a asp-page="/FileUpload">Upload</a></li>
+                    <li><a asp-page="/Grid">Grid TEST</a></li>
                 </ul>
             </div>
         </div>
